refine JVM options